支持在页面上展示多项选择题和问答题的录入界面

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises/new.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises/new.html
@@ -68,11 +68,12 @@ require(["dojo/ready",
 			<li>
 				<a href="#" id="multiple">多项选择题</a>
 			</li>
-			<li>
-				<a href="#" id="tk">填空题</a>
+			<!-- 暂时不实现 -->
+			<li style="display: none">
+				<a href="#" id="fill">填空题</a>
 			</li>
 			<li>
-				<a href="#" id="wd">问答题</a>
+				<a href="#" id="essayQuestion">问答题</a>
 			</li>
 		</ul>
 		<div style="margin-top: 10px;" id="formContainer">
