添加接入新浪微博验证信息

--- a/client/bundles/com.zizibujuan.drip.client.core/web/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/index.html
@@ -4,6 +4,9 @@
 <meta charset="UTF-8">
 <!-- qq -->
 <meta property="qc:admins" content="723131631212525166375" />
+<!-- sina weibo -->
+<meta property="wb:webmaster" content="76a2a86c8f477642" />
+
 <link type="text/css" rel="stylesheet" href="/dijit/themes/claro/claro.css" />
 <link type="text/css" rel="stylesheet" href="/dojo/resources/dojo.css" />
 <link type="text/css" rel="stylesheet" href="/resources/main.css" />
