添加“人人”和“QQ”登录按钮，图片

--- a/client/bundles/com.zizibujuan.drip.client.core/web/dashboard.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/dashboard.html
@@ -76,6 +76,19 @@ require(["dojo/ready",
 	<div class="wrapper">
 		<div id="dashboard">
 			<div data-dojo-type="Activity"></div>
+			<div style="float:right;width: 240px;margin-top: 15px">
+				<div>
+					<!-- 提供完善信息链接，如果用户已经设置，则不再显示该链接 -->
+					
+				</div>
+				<div>
+					<!-- 可能感兴趣的人,同时提供“下一组”和“找人” -->
+					<h3>可能感兴趣的人</h3>
+					<div>
+						<!-- 推荐人列表 -->
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 	
