将人人邀请的弹出狂的display改为popup进行测试，之前用iframe会刷新页面。

--- a/client/bundles/com.zizibujuan.drip.client.core/web/dashboard.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/dashboard.html
@@ -48,7 +48,7 @@ require(["dojo/ready",
 function sendRenrenRequest(){
 	var uiOptions = {
 		url: "request",
-		display: "iframe",//popup
+		display: "popup",//popup
 		params: { // TODO：这里的文本需要反复优化
 			"accept_url":"http://www.zizibujuan.com/renren",// 接受邀请按钮url
 			"accept_label":"好的,一起学习",//接受文本
