添加跳转页面，该页面用来关闭弹出的窗口

--- a/client/bundles/com.zizibujuan.drip.client.core/web/dashboard.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/dashboard.html
@@ -52,12 +52,13 @@ function sendRenrenRequest(){
 		params: { // TODO：这里的文本需要反复优化
 			"accept_url":"http://www.zizibujuan.com/login/renren",// 接受邀请按钮url
 			"accept_label":"好的,一起学习",//接受文本
-			//"redirect_uri":"http://www.zizibujuan.com/redirect.html",// 点击确定或取消后跳转的url,需要在这个url中在drip中保存数据。 TODO
+			"redirect_uri":"http://www.zizibujuan.com/closeRenrenInviteWindow.html",// 点击确定或取消后跳转的url,需要在这个url中在drip中保存数据。 TODO
 			"actiontext":"邀请好友一起学习",// 好友喊你来学习
 			"selector_mode":"1",//2,3
 			"app_msg":"孜孜不倦诚邀您与大家一起学习",
 			"send_btn_label":"真诚邀请"
 		},
+		//access_token	
 		onSuccess: function(a,b,c){
 			console.log(a,b,c);
 		},
