--- a/client/bundles/com.zizibujuan.drip.client.core/web/closeRenrenInviteWindow.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/closeRenrenInviteWindow.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <title>关闭人人邀请弹出框</title>
 <script type="text/javascript">
+// 可通过判断链接中是否有senderId来确定是否点击了确定按钮。
+console.log("closeRenrenInviteWindow.html",window.location.href);
 parent.window.close();
 </script>
 </head>
