设计个人首页的左侧栏目，并将用户相关信息显示在界面上。

--- a/client/bundles/com.zizibujuan.drip.client.core/web/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/index.html
@@ -18,9 +18,11 @@ data-redirecturi="http://zizibujuan.com" charset="utf-8"></script>
 <body>
 
 	<div style="color:#00a300;margin:0 auto; width: 450px;margin-top: 90px;">
-		<div style="font-weight: bolder; font-size: 32px; background-color: #00a300;
-		color:white;padding-left: 10px; padding-top: 8px; padding-bottom: 4px;
-		border-radius:10px 10px 0px 0px;border:solid 1px #00a300;letter-spacing: 4px;">孜孜不倦</div>
+		<div style="padding-left: 10px; padding-top: 8px; padding-bottom: 4px;
+		background-color: #00a300;
+		border-radius:10px 10px 0px 0px;border:solid 1px #00a300;">
+		<span style="font-weight: bolder; font-size: 32px; 
+		color:white;letter-spacing: 4px;">孜孜不倦</span></div>
 		
 		<div style="height:270px;border: solid 1px; border-radius:0px 0px 10px 10px">
 			<div style="font-weight:normal; font-size: 25px; height:180px; line-height:180px;text-align:center;">
