--- a/client/bundles/com.zizibujuan.drip.client.core/web/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/index.html
@@ -31,7 +31,7 @@ data-redirecturi="http://zizibujuan.com" charset="utf-8"></script>
 			
 			<div style="width:234px; margin: 0 auto">
 				<a href="/login/renren">
-					<img alt="用人人帐号登录" src="resources/images/renren_login_white_234_48.png" style="width:234px;height:48px;border:none"></img>
+					<img alt="用人人帐号登录" src="resources/images/renren_login_white_234_48.png" style="border:none"></img>
 				</a>
 				<div style="font-size: 14px;margin-top: 3px;">不用注册，与<span style="color:#369;font-weight: bold;">人人</span>好友一起学习</div>
 			</div>
