恢复误删除的Renren.init()脚本

--- a/client/bundles/com.zizibujuan.drip.client.core/web/dashboard.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/dashboard.html
@@ -225,10 +225,13 @@ color:#69768C;
  		</div>
  	</div>
  	<div>
+ 		<script type="text/javascript">
+			// TODO：appId不能在这里硬编码
+			Renren.init({appId:220706});
+		</script>
  		<input value="邀请人人好友一起学习" style="width:100%; color:#00a300; padding-top: 8px; padding-bottom: 8px;
  		margin-top:10px; font-weight:bold;
  		font-size: 17px;cursor: pointer;" type="button" onclick="sendRenrenRequest();"/>
- 		<a href="javascript:sendRenrenRequest();">邀请</a>
  	</div>
  	<div class="nav">
  	 <!-- 导航 -->
