将dojo代码恢复到上一次更新，因为使用最新的代码时，dojox.form.Uploader 无法使用。

--- a/client/bundles/com.zizibujuan.drip.client.dojo/static/dijit/tests/test_Dialog.html
+++ b/client/bundles/com.zizibujuan.drip.client.dojo/static/dijit/tests/test_Dialog.html
@@ -69,10 +69,7 @@
 				title: 'Self-Destruct Dialog',
 				content: 'This dialog will destroy itself onHide.<br/><input type="text" id="SelfDestructDlgInput" />',
 				onHide: function(){
-					// Use setTimeout() to avoid memory leak warning for sIEve
-					setTimeout(function(){
-						dlg.destroyRecursive();
-					}, 0);
+					this.destroyRecursive();
 				}
 			});
 			dlg.show();
