--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises/new.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises/new.html
@@ -19,38 +19,23 @@
    src="/mathjax/MathJax.js?config=MML_HTMLorMML">
 </script>
 <script type="text/javascript">
-require(["dojo/ready", 
+require(["Header",
+         "dojo/ready", 
          "dojo/store/JsonRest",
          "dijit/registry",
-         "drip/exercises/new",
+         "drip/exercises/ExerciseForm",
          "dojo/parser",
          "dijit/form/Button",
-         "Header",
          "dojo/domReady!"],function(
+        		 Header,
         		 ready,
         		 JsonRest,
         		 registry,
-        		 ExerciseInput){
+        		 ExerciseForm){
 	ready(function(){
-		var exerciseInput = new ExerciseInput();
-		exerciseInput.placeAt("leftForm");
+		var exerciseForm = new ExerciseForm();
+		exerciseForm.placeAt("leftForm");
 		
-		
-		/*
-		function(e){
-		var content = editor.get("value");
-		var data = {content:content};
-		jsonRest.add(data).then(function(response){
-			// 保存成功
-			//		给出成功提示，然后一段时间后自动消失（使用固定的提示区域）
-			//		清空习题内容
-		},function(error){
-			// 保存失败
-			//		界面上保留习题内容
-			//		给出失败提示（成功与失败使用相同的提示区域）
-		});
-	}
-		*/
 	});
 	
 });
