完成了公共首页的设计
公共首页目前包含四部分内容：
* logo
* 题库入口
* 登录入口
* 网站介绍（包含主标题和副标题）

--- a/client/bundles/com.zizibujuan.drip.client.core/web/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/index.html
@@ -7,6 +7,7 @@
 <!-- sina weibo -->
 <meta property="wb:webmaster" content="76a2a86c8f477642" />
 <title>孜孜不倦 · 高等数学</title>
+<link rel="stylesheet" type="text/css" href="resources/index.css" />
 <!-- qq登录脚本 
 <script type="text/javascript"
 src="http://qzonestyle.gtimg.cn/qzone/openapi/qc_loader.js" 
@@ -15,28 +16,53 @@ data-redirecturi="http://zizibujuan.com" charset="utf-8"></script>
 -->
 
 </head>
-<body>
-
-	<div style="color:#00a300;margin:0 auto; width: 450px;margin-top: 90px;">
-		<div style="padding-left: 10px; padding-top: 8px; padding-bottom: 4px;
-		background-color: #00a300;
-		border-radius:10px 10px 0px 0px;border:solid 1px #00a300;">
-		<span style="font-weight: bolder; font-size: 32px; 
-		color:white;letter-spacing: 4px;">孜孜不倦</span></div>
-		
-		<div style="height:270px;border: solid 1px; border-radius:0px 0px 10px 10px">
-			<div style="font-weight:normal; font-size: 25px; height:180px; line-height:180px;text-align:center;">
-				亲，一起学习<span style="font-weight: bold;font-size: 26px">高等数学</span>吧!
-			</div>
-			
-			<div style="width:234px; margin: 0 auto">
+<body style="padding: 0px;margin: 0px">
+<div>
+<div class="drip_header drip_header_logged_out">
+	<div class="container clearfix">
+		<a href="/" class="drip_header_logo">孜孜不倦</a>
+		<span class="drip_version">测试版</span>
+		<ul class="drip_top_nav">
+			<li><a href="/exercises">题库</a></li>
+			<!-- <li><a href="#">开发博客</a></li>  -->
+		</ul>
+	</div>
+</div>
+<div class="drip_home drip_site">
+	<div class="drip_welcome_area clearfix">
+		<div class="container">
+			<div class="drip_home_signup">
 				<a href="/login/renren">
 					<img alt="用人人帐号登录" src="resources/images/renren_login_white_234_48.png" style="border:none"></img>
 				</a>
-				<div style="font-size: 14px;margin-top: 3px;">不用注册，与<span style="color:#369;font-weight: bold;">人人</span>好友一起学习</div>
+				<p class="drip_note">不用注册，与<span style="color:#369;font-weight: bold;">人人</span>好友一起学习</p>
 			</div>
+			<div class="drip_heading">
+				<p>一起交流学习心得</p>
+				<p class="drip_heading_indent">共同优化教育资源</p>
+			</div>
+			<p class="drip_subheading">
+				<!-- 在这里，大家一起出题、做题、编写讲义、分享教学视频 
+				不论年龄大小，不论身处何处，大家一起出题、做题、讨论。			
+				<br/>现已开放<strong>高等数学</strong>专区-->
+				营造一个开放、优质的<span style="color:#00a300">高等数学</span>学习环境，<br/>
+				欢迎同学们来这里一起学习，拓宽视野，共同进步。
+			</p>
 		</div>
 	</div>
-
+	
+	<div>
+		<!-- 网站帮助，介绍完站支持哪些操作  -->
+	</div>
+</div>
+<div>
+	<!-- 开发日志 
+	<div class="container">
+		<div id="devInfoMessage">设计界面中</div>
+		<div id="devInfoLink">更多...</div>
+	</div>
+	-->
+</div>
+</div>
 </body>
 </html>
