--- a/client/bundles/com.zizibujuan.drip.client.core/web/dashboard.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/dashboard.html
@@ -206,7 +206,7 @@ color:#69768C;
 						<span>用户名</span>
 					</a>
 				</li>
-				<li><a href="#" title="录入新习题" class="drip_new_exercise">+习题</a></li>
+				<li><a href="/exercises/new" title="录入新习题" class="drip_new_exercise">+习题</a></li>
 				<li><a href="#" title="退出">[退出]</a></li>
 			</ul>
 		</div>
@@ -216,29 +216,22 @@ color:#69768C;
 		<div>
 			<div class="drip_main">
 				<div class="clearfix">
-					<div class="drip_main_left">
-						<div class="drip_main_left_nav">
-							<div id="left_nav_common">
-								<div class="nav">
-								 	 <!-- 导航 -->
-								 	 <ul style="list-style: none;padding-left: 0px">
-								 	 	<li class="menu-item menu-focus"><a href="/" class="title">首页</a></li>
-								 	 	<li class="menu-item">
-								 	 		<a href="/answers" class="title">已答习题<span class="count" id="answer_count" style="margin-left:10px;"></span>
-								 	 		</a>
-								 	 	</li>
-								 	 	<li class="menu-item">
-								 	 		<a href="/exercises" class="title">已录习题<span class="count" style="margin-left:10px;" id="exer_count"></span></a>
-								 	 		<a href="/exercises/new" class="op" id="exer_input">录入</a>
-								 	 	</li>
-								 	 </ul>
-								 </div>
-							</div>
-						</div>
-					</div>
-					<div class="drip_main_center_right">
 						<div class="drip_main_center">
-							<div style="border-right:solid 1px #ddd; border-left:solid 1px #ddd;min-height: 800px">
+							<!-- 个人首页的链接tab -->
+							<div class="drip_tab_nav">
+								<ul class="drip_tab_nav_tabs">
+									<li>
+										<a href="/" class="selected drip_tab_nav_tab">好友动态</a>
+									</li>
+									<li>
+										<a href="#" class="drip_tab_nav_tab">我答的习题 <span class="counter">10</span></a>
+									</li>
+									<li>
+										<a href="#" class="drip_tab_nav_tab">我录的习题 <span class="counter">10</span></a>
+									</li>
+								</ul>
+							</div>
+							<div class="drip_activity_list">
 								<div data-dojo-type="Activity" style="padding-top: 10px;padding-left: 20px">加载中...</div>
 							</div>
 						</div>
@@ -282,7 +275,7 @@ color:#69768C;
 							 	</div>
 							</div>
 						</div>
-					</div>
+					
 				</div>
 				
 			</div>
