--- a/client/bundles/com.zizibujuan.drip.client.core/web/dashboard.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/dashboard.html
@@ -211,7 +211,7 @@ color:#69768C;
 					</a>
 				</li>
 				<li><a href="/exercises/new" title="录入新习题" class="drip_new_exercise">+习题</a></li>
-				<li><a href="#" title="退出" id="logout">[退出]</a></li>
+				<li><button title="退出" id="logout" class="logout">退出</button></li>
 			</ul>
 		</div>
 	</div>
