在页面顶部添加一个label，说明页面的作用。

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises/new.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises/new.html
@@ -77,6 +77,7 @@ require(["dojo/ready",
 		 -->
 		<div data-dojo-type="dijit/form/Button" style="margin: 0px;" id="btnNewExercise">保存</div>
 		<div id="main" class="container" style="padding-top: 40px;">
+			<label style="font-size: 18px; font-weight: bold">录入新习题</label>
 			<ul class="tabs">
 				<li>
 					<a href="#" class="selected" id="single">单项选择题</a>
