完成个人首页中“回答习题”按钮和弹出回答面板的样式的设计。

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises/new.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises/new.html
@@ -66,7 +66,7 @@ require(["dojo/ready",
 						</a>
 					</li>
 					<li><a href="/exercises/new" title="录入新习题" class="drip_new_exercise">+习题</a></li>
-					<li><button title="退出" id="logout" class="logout">退出</button></li>
+					<li><input type="button" title="退出" id="logout" value="退出" class="logout"></input></li>
 				</ul>
 			</div>
 		</div>
