在首页中添加帮助信息
写了一个初稿，还需要不断完善宣传信息，达到即准确的表达了网站的意图，
也言简意赅，语言优美。

--- a/client/bundles/com.zizibujuan.drip.client.core/web/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/index.html
@@ -17,7 +17,7 @@ data-redirecturi="http://zizibujuan.com" charset="utf-8"></script>
 
 </head>
 <body style="padding: 0px;margin: 0px">
-<div>
+<div id="wrapper">
 <div class="drip_header drip_header_logged_out">
 	<div class="container clearfix">
 		<a href="/" class="drip_header_logo">孜孜不倦</a>
@@ -50,8 +50,25 @@ data-redirecturi="http://zizibujuan.com" charset="utf-8"></script>
 			</p>
 		</div>
 	</div>
-	
-	<div>
+	<!-- 待定稿 -->
+	<div class="container">
+		<div class="site_introduces">
+			<div class="site_introduce">
+				<img class="site_introduce_illustration">
+				<h3>在这里，我能做什么？</h3>
+				<p>解答习题，录入习题，知道好友在学什么，优化和评价好友做的作业。<br/>还有很多功能陆续开发中...</p>
+			</div>
+			<div class="site_introduce">
+				<img class="site_introduce_illustration">
+				<h3>快速录入数学公式</h3>
+				<p>本网站提供首个纯键盘的快速数学公式编辑器，<strong>只要会读数学符号就会写数学公式</strong>。如果不会读，请参考<a href="#">数学符号读法</a>。</p>
+			</div>
+			<div class="site_introduce">
+				<img class="site_introduce_illustration">
+				<h3>免费的开放学习平台</h3>
+				<p>无论你是谁，来自哪里，都可与全世界最优秀的人一起学习，享用高质量的教育资源，当然也离不开您在这里贡献的一点一滴。</p>
+			</div>
+		</div>
 		<!-- 网站帮助，介绍完站支持哪些操作  -->
 	</div>
 </div>
