将页面顶部的logo换成图片

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises/new.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises/new.html
@@ -59,7 +59,9 @@ require(["dojo/ready",
 	<div id="wrapper" class="drip_body">
 		<div class="drip_header drip_header_logged_in" style="position: fixed; width: 100%">
 			<div class="container clearfix">
-				<a href="/" class="drip_header_logo">孜孜不倦</a>
+				<a href="/" class="drip_header_logo" style="height:25px;">
+					<img alt="孜孜不倦" style="height:25px;" src="/resources/images/home_logo.png">
+				</a>
 				<div class="divider-vertical"></div>
 				<ul class="drip_top_nav">
 					<li><a href="/">首页</a></li>
