--- a/client/bundles/com.zizibujuan.drip.client.core/web/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/index.html
@@ -20,7 +20,9 @@ data-redirecturi="http://zizibujuan.com" charset="utf-8"></script>
 <div id="wrapper">
 <div class="drip_header drip_header_logged_out">
 	<div class="container clearfix">
-		<a href="/" class="drip_header_logo">孜孜不倦</a>
+		<a href="/" class="drip_header_logo">
+			<img alt="孜孜不倦" width="140px" height="40px" src="resources/images/home_logo.png">
+		</a>
 		<span class="drip_version">测试版</span>
 		<ul class="drip_top_nav">
 			<li><a href="/exercises">题库</a></li>
